<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraintlayout_bookmark_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageview_bookmark"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_favorite_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textview_bookmark_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/imageview_bookmark"
                app:layout_constraintStart_toStartOf="@id/imageview_bookmark"
                app:layout_constraintTop_toBottomOf="@id/imageview_bookmark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/save_favorite"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/textview_bookmark_save"
                app:layout_constraintStart_toStartOf="@id/textview_bookmark_save"
                app:layout_constraintTop_toBottomOf="@id/textview_bookmark_save" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/my_list"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_my_list_count"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textview_title"
            app:layout_constraintStart_toEndOf="@id/textview_title"
            app:layout_constraintTop_toTopOf="@id/textview_title"
            tools:text="0 개" />

        <View
            android:id="@+id/view_border"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_title" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_image_info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_border" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>